src/snapshots/kk__tests__compiler__typecheck__function_generalization_3.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let identity = \x => x
let constant = \_ => 2
let map = \(x, f) => x.f()
let x: string = 'hello'.map(identity)
let y: string = 'hello'.map(\_ => 'yo')
let z: string = 'hello'.map(constant)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/function_generalization_3.kk:6:17
  │
6 │ let z: string = 'hello'.map(constant)
  │                 ^^^^^^^^^^^^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - string      | + number    |
    +---------------+-------------+
